--- a/frontend/index.html
+++ b/frontend/index.html
@@ -495,53 +495,81 @@ function getBlendshape(index) {
   return v;
 }
 
-/*/* -----------------------------
-   SPEAK – LEBENDIG & ZITTERFREI
-   Recovered Version (war schon sehr gut)
-   + neue Blendshapes subtil integriert
------------------------------ */
+/* --------------------------------
+   SPEAK – ANTI-ZITTER, NATÜRLICH & MIT PAUSEN
+----------------------------------- */
 function speak(text, slow = false) {
   const u = new SpeechSynthesisUtterance(text);
   u.lang = "de-DE";
-  u.rate = slow ? 0.80 : 1.12;
+  u.rate = slow ? 0.75 : 1.1;
   if (maleVoice) u.voice = maleVoice;
 
   let lipsyncInterval = null;
-  let t = 0;
+  let t = 0;           // schneller Oszillator
+  let w = 0;           // langsamer Oszillator für Betonung
+
+  // Neue Variablen zur Steuerung der Pausen
+  let inPause = false;
+  let pauseDuration = 0; // Dauer der Pause
+  let lastPauseTime = 0; // Zeit des letzten Pause-Starts
 
   u.onstart = () => {
     talking = true;
-    justFinishedSpeaking = false;
     mouthCooldown = false;
+    justFinishedSpeaking = false;
 
     lipsyncInterval = setInterval(() => {
-      // viel weniger sinus → viel weniger „Fisch“
-      t += slow ? 0.04 : 0.09;
+      // Zeitachsen (Zittern entsteht bei zu schnellen Sprüngen → hier sauber!)
+      t += slow ? 0.05 : 0.09;
+      w += slow ? 0.02 : 0.045;
 
-      const base = Math.abs(Math.sin(t * 0.7));     // SLOW sine
-      const accent = Math.abs(Math.sin(t * 2.9));   // schnelle Artikulation
-      let jaw = base * 0.35 + accent * 0.25;
+      // --------------------------------------
+      //   1) BASISÖFFNUNG – weich & stabil
+      // --------------------------------------
+      let jaw = Math.max(0, Math.sin(t) * 0.38); // NIE negativ → kein Klappern
 
-      // kleine unregelmäßige Variation
-      jaw += (Math.random() * 0.10 - 0.05);
+      // --------------------------------------
+      //   2) WORTBETONUNG – Low-Frequency Noise
+      // --------------------------------------
+      const emphasis = Math.sin(w) * 0.12;  // sehr weich, keine Sprünge
+      jaw += emphasis;
 
-      // clamp
-      jaw = Math.min(Math.max(jaw, 0.15), 0.75);
+      // Begrenzen
+      jaw = Math.min(Math.max(jaw, 0), 0.48);
 
-      const wide = jaw * (0.25 + Math.random() * 0.07);
-      const puck = jaw * (0.15 + Math.random() * 0.05);
+      // --------------------------------------
+      //   3) Mundformen
+      // --------------------------------------
+      const wide = jaw * 0.34;   // A/E-Silben
+      const puck = jaw * 0.18;   // O/U-Silben
+      const smile = Math.max(0, Math.sin(t * 0.6) * 0.1); // Smiles (leichtes Lächeln bei Sprechbewegungen)
+      const frown = Math.max(0, Math.sin(t * 0.6 + Math.PI) * 0.1); // Frown (leichtes Zucken für Unregelmäßigkeiten)
 
-      // Smile/Frown NICHT rhythmisch, nur leicht moduliert
-      const smile = jaw * (0.05 + Math.random() * 0.05);
-      const frown = jaw * (0.03 + Math.random() * 0.02);
+      // --------------------------------------
+      //   4) Mikropausen
+      // --------------------------------------
+      const currentTime = performance.now();
+      if (currentTime - lastPauseTime > pauseDuration && Math.random() < 0.05 && !inPause) {
+        inPause = true;
+        pauseDuration = Math.random() * 120 + 50; // zufällige Pause zwischen 50ms und 170ms
+        lastPauseTime = currentTime;
+        jaw *= 0.3; // Pause wirkt sich auf die Mundöffnung aus
+      }
 
+      if (inPause && currentTime - lastPauseTime > pauseDuration) {
+        inPause = false;
+      }
+
+      // --------------------------------------
+      //   5) SETZEN – jitterfrei
+      // --------------------------------------
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
-      setBlendshape(mouthSmileIndex, smile);
-      setBlendshape(mouthFrownIndex, frown);
+      setBlendshape(mouthSmileIndex, smile);  // Smile hinzufügen
+      setBlendshape(mouthFrownIndex, frown);  // Frown hinzufügen
 
-    }, 33);
+    }, 38);  // (~26 FPS) synchronisiert → KEIN Flackern
   };
 
   u.onend = () => {
@@ -549,20 +577,21 @@ function speak(text, slow = false) {
     lipsyncInterval = null;
     talking = false;
 
-    // Sofort ALLE Mundbewegungen STOPPEN (kein Nachklapper mehr!)
-    setBlendshape(jawOpenIndex, 0.0);
-    setBlendshape(mouthWideIndex, 0.0);
-    setBlendshape(mouthPuckerIndex, 0.0);
-    setBlendshape(mouthSmileIndex, 0.0);
-    setBlendshape(mouthFrownIndex, 0.0);
+    // Sofort in Idle – jitterfrei
+    setBlendshape(jawOpenIndex, 0.05);
+    setBlendshape(mouthWideIndex, 0);
+    setBlendshape(mouthPuckerIndex, 0);
+    setBlendshape(mouthSmileIndex, 0);  // Smile auf 0 setzen
+    setBlendshape(mouthFrownIndex, 0);  // Frown auf 0 setzen
 
-    // Cooldown für animate()
+    // Kleinster Cooldown zur Verhinderung von Frame-Rauschen
     justFinishedSpeaking = true;
     mouthCooldown = true;
 
-    // nach genau 2 Frames wieder frei
-    requestAnimationFrame(() => { justFinishedSpeaking = false; });
-    requestAnimationFrame(() => { mouthCooldown = false; });
+    setTimeout(() => {
+      justFinishedSpeaking = false;
+      mouthCooldown = false;
+    }, 25);
   };
 
   speechSynthesis.speak(u);
