--- a/frontend/index.html
+++ b/frontend/index.html
@@ -223,8 +223,7 @@ function setBlendshape(index, value) {
   });
 }
 
-
-  // ====================================
+// ====================================
 // ANIMATE – FINAL & STABLE
 // ====================================
 function animate() {
@@ -233,9 +232,12 @@ function animate() {
 
   // 🧊 Nur Idle, wenn NICHT gerade frisch gesprochen wurde:
   if (!talking && !justFinishedSpeaking && !mouthCooldown) {
-      setBlendshape(jawOpenIndex, 0.05);  // dezente Atmung
+      // Dezente Atmung, leichtes Öffnen des Mundes im Idle-Zustand
+      setBlendshape(jawOpenIndex, 0.05);  // leicht offen für Atmung
       setBlendshape(mouthWideIndex, 0.0);
       setBlendshape(mouthPuckerIndex, 0.0);
+      setBlendshape(mouthSmileIndex, 0.0);  // Smile auf 0
+      setBlendshape(mouthFrownIndex, 0.0);  // Frown auf 0
   }
 
   const now = performance.now();
@@ -250,7 +252,6 @@ function animate() {
     renderer.render(scene, camera);
     return;
   }
-
 
   // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL
   if (rising) {
@@ -279,6 +280,22 @@ function animate() {
     model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+
+    // Dynamische Mundbewegungen während des Sprechens (verschiedene Silben)
+    const mouthShape = Math.max(0, Math.sin(now * 0.1) * 0.38); // jaw open dynamic
+    const wide = mouthShape * 0.34;   // A/E-Silben
+    const puck = mouthShape * 0.18;   // O/U-Silben
+
+    // Smile und Frown für Unregelmäßigkeiten oder natürliche Mundbewegung
+    const smile = Math.max(0, Math.sin(now * 0.6) * 0.1); // leichtes Lächeln
+    const frown = Math.max(0, Math.sin(now * 0.6 + Math.PI) * 0.1); // leichtes Zucken
+
+    // Mundbewegungen während des Sprechens
+    setBlendshape(jawOpenIndex, mouthShape);
+    setBlendshape(mouthWideIndex, wide);
+    setBlendshape(mouthPuckerIndex, puck);
+    setBlendshape(mouthSmileIndex, smile);  // Smile hinzufügen
+    setBlendshape(mouthFrownIndex, frown);  // Frown hinzufügen
   }
 
   // 5️⃣ WARTET AUF FRAGE → FRONTAL
@@ -317,16 +334,19 @@ if (!hmNeigen && !rising) {
     0.018
   );
 }
- // 🟢 OpenAI TTS / SpeechSynthesis steuern Lippen
-// Animate greift NICHT ein, solange talking = true!
+
+// 🟢 OpenAI TTS / SpeechSynthesis steuern Lippen
 if (!talking) {
   // hier nur Idle-Mundhaltung, sobald NICHT gesprochen wird:
-  setBlendshape(jawOpenIndex, 0.1);  // leicht offen (Atmung)
+  setBlendshape(jawOpenIndex, 0.1);  // leicht offen für Atmung
   setBlendshape(mouthWideIndex, 0);
   setBlendshape(mouthPuckerIndex, 0);
+  setBlendshape(mouthSmileIndex, 0);  // Smile auf 0 setzen
+  setBlendshape(mouthFrownIndex, 0);  // Frown auf 0 setzen
 }
 renderer.render(scene, camera);
 }
+
   
 /* -----------------------------
    STATE MACHINE – LOGIK (FINAL)
@@ -371,23 +391,23 @@ if ("webkitSpeechRecognition" in window) {
           STATE = "answer";
           rising = true;
           riseStartTime = performance.now();
-          // 🔁 NEUER BLOCK: ECHTES TTS MIT LIPSYNC
-fetch("/tts", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ text: data.answer })
-})
-.then(r => r.json())
-.then(dataTTS => {
-  // 1. Audio + Lippenbewegung
-  playAudioAndLipsync(dataTTS.audio, dataTTS.lipsync);
-})
-.catch(err => {
-  console.error("❌ TTS-Fallback:", err);
-  // Fallback: alte TTS nutzen
-  speak(data.answer);
-});
 
+          // 🔁 NEUER BLOCK: ECHTES TTS MIT LIPSYNC
+          fetch("/tts", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ text: data.answer })
+          })
+          .then(r => r.json())
+          .then(dataTTS => {
+            // 1. Audio + Lippenbewegung
+            playAudioAndLipsync(dataTTS.audio, dataTTS.lipsync);
+          })
+          .catch(err => {
+            console.error("❌ TTS-Fallback:", err);
+            // Fallback: alte TTS nutzen
+            speak(data.answer);
+          });
 
           // 3️⃣ ANTWORT FERTIG → jetzt erst zurück nach rechts!
           const waitUntilDone = setInterval(() => {
@@ -416,10 +436,14 @@ fetch("/tts", {
     }
   };
 }
-   /* -----------------------------
+/* -----------------------------
    BUTTON – GREET & LISTEN
 ----------------------------- */
 document.getElementById("micBtn").onclick = () => {
+  // Verhindert mehrfaches Starten der Spracherkennung
+  if (recognition && recognition.abort) {
+    recognition.abort();
+  }
 
   // Erste Betätigung → Begrüßung
   if (!greeted) {
@@ -449,8 +473,9 @@ document.getElementById("micBtn").onclick = () => {
   STATE = "listen";
   recognition.start();
 };
+
 /* -----------------------------
-   1) MÄNNLICHE STIMME FEST SETZEN  (GLOBAL!)
+   MÄNNLICHE STIMME FEST SETZEN  (GLOBAL!)
 ----------------------------- */
 let maleVoice = null;
 
@@ -468,32 +493,6 @@ function setMaleVoice() {
 
 speechSynthesis.onvoiceschanged = setMaleVoice;
 setMaleVoice();
-
-/* --------------------------------
-   BENÖTIGT für glatte Übergänge:
------------------------------------ */
-function lerp(a, b, t) { 
-  return a + (b - a) * t;
-}
-
-function setBlendshape(index, value) {
-  if (!model) return;
-  model.traverse(obj => {
-    if (obj.isMesh && obj.morphTargetInfluences && index !== null) {
-      obj.morphTargetInfluences[index] = value;
-    }
-  });
-}
-
-function getBlendshape(index) {
-  let v = 0;
-  model.traverse(obj => {
-    if (obj.isMesh && obj.morphTargetInfluences) {
-      v = obj.morphTargetInfluences[index] ?? v;
-    }
-  });
-  return v;
-}
 
 /* --------------------------------
    SPEAK – ANTI-ZITTER, NATÜRLICH & MIT PAUSEN UND SPEZIFISCHEN LAUTEN
