--- a/frontend/index.html
+++ b/frontend/index.html
@@ -495,28 +495,17 @@ speechSynthesis.onvoiceschanged = setMaleVoice;
 setMaleVoice();
 
 /* --------------------------------
-   SPEAK – ANTI-ZITTER, NATÜRLICH & MIT PAUSEN UND SPEZIFISCHEN LAUTEN
+   SPEAK – STABIL, RUHIG, REALISTISCH
 ----------------------------------- */
 function speak(text, slow = false) {
   const u = new SpeechSynthesisUtterance(text);
   u.lang = "de-DE";
-  u.rate = slow ? 0.75 : 1.1;
+  u.rate = slow ? 0.8 : 1.05;
   if (maleVoice) u.voice = maleVoice;
 
   let lipsyncInterval = null;
-  let t = 0;           // schneller Oszillator für Basisbewegung
-  let w = 0;           // langsamer Oszillator für Betonung
-  let pauseDuration = 0;  // Dauer der Pause
-  let inPause = false;    // Steuerung für Mikropause
-  let lastPauseTime = 0;  // Zeit des letzten Pause-Starts
-
-  // Variablen für spezifische Lippenbewegungen
-  const lipsyncConfig = {
-    P: 0.35, // starker Mundschluss für P
-    M: 0.35, // starker Mundschluss für M
-    O: 0.48, // breite Mundöffnung für O
-    A: 0.45, // sehr breite Mundöffnung für A
-  };
+  let t = 0;     // Basisbewegung
+  let w = 0;     // Betonung
 
   u.onstart = () => {
     talking = true;
@@ -524,90 +513,50 @@ function speak(text, slow = false) {
     justFinishedSpeaking = false;
 
     lipsyncInterval = setInterval(() => {
-      // Zeitachsen (Zittern entsteht bei zu schnellen Sprüngen → hier sauber!)
-      t += slow ? 0.05 : 0.09;
-      w += slow ? 0.02 : 0.045;
+      t += slow ? 0.05 : 0.085;
+      w += slow ? 0.02 : 0.04;
 
-      // --------------------------------------
-      //   1) BASISÖFFNUNG – weich & stabil
-      // --------------------------------------
-      let jaw = Math.max(0, Math.sin(t) * 0.38); // NIE negativ → kein Klappern
+      // --- 1) Basisöffnung: weich, NIE negativ ---
+      let jaw = Math.max(0, Math.sin(t) * 0.32);
 
-      // --------------------------------------
-      //   2) WORTBETONUNG – Low-Frequency Noise
-      // --------------------------------------
-      const emphasis = Math.sin(w) * 0.12;  // sehr weich, keine Sprünge
-      jaw += emphasis;
+      // --- 2) sanfte Betonung ---
+      jaw += Math.sin(w) * 0.10;
 
       // Begrenzen
-      jaw = Math.min(Math.max(jaw, 0), 0.48);
+      jaw = Math.min(Math.max(jaw, 0), 0.45);
 
-      // --------------------------------------
-      //   3) SPEZIFISCHE LAUTBEWEGUNGEN (P, M, O, A)
-      // --------------------------------------
-      // Bestimme spezifische Lippenbewegungen je nach Wortlaut
-      let mouthShape = jaw;
-      if (text.match(/[Pp]/)) {
-        mouthShape = lipsyncConfig.P; // P → starker Mundschluss
-      } else if (text.match(/[Mm]/)) {
-        mouthShape = lipsyncConfig.M; // M → starker Mundschluss
-      } else if (text.match(/[Oo]/)) {
-        mouthShape = lipsyncConfig.O; // O → breitere Mundöffnung
-      } else if (text.match(/[Aa]/)) {
-        mouthShape = lipsyncConfig.A; // A → sehr breite Mundöffnung
-      }
+      // --- 3) Mundformen aus jaw ableiten ---
+      const wide = jaw * 0.30;
+      const puck = jaw * 0.16;
+      const smile = 0;   // deaktiviert → stabil
+      const frown = 0;   // deaktiviert → stabil
 
-      // --------------------------------------
-      //   4) Mundformen
-      // --------------------------------------
-      const wide = mouthShape * 0.34;   // A/E-Silben
-      const puck = mouthShape * 0.18;   // O/U-Silben
-      const smile = Math.max(0, Math.sin(t * 0.6) * 0.1); // Smiles (leichtes Lächeln bei Sprechbewegungen)
-      const frown = Math.max(0, Math.sin(t * 0.6 + Math.PI) * 0.1); // Frown (leichtes Zucken für Unregelmäßigkeiten)
-
-      // --------------------------------------
-      //   5) Mikropausen
-      // --------------------------------------
-      const currentTime = performance.now();
-      if (currentTime - lastPauseTime > pauseDuration && Math.random() < 0.05 && !inPause) {
-        inPause = true;
-        pauseDuration = Math.random() * 120 + 50; // zufällige Pause zwischen 50ms und 170ms
-        lastPauseTime = currentTime;
-        jaw *= 0.3; // Pause wirkt sich auf die Mundöffnung aus
-      }
-
-      if (inPause && currentTime - lastPauseTime > pauseDuration) {
-        inPause = false;
-      }
-
-      // --------------------------------------
-      //   6) SETZEN – jitterfrei
-      // --------------------------------------
-      setBlendshape(jawOpenIndex, mouthShape);
+      // --- 4) Setzen ---
+      setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
-      setBlendshape(mouthSmileIndex, smile);  // Smile hinzufügen
-      setBlendshape(mouthFrownIndex, frown);  // Frown hinzufügen
+      setBlendshape(mouthSmileIndex, smile);
+      setBlendshape(mouthFrownIndex, frown);
 
-    }, 38);  // (~26 FPS) synchronisiert → KEIN Flackern
+    }, 38);  // sauber synchronisiert
   };
+
 
   u.onend = () => {
     clearInterval(lipsyncInterval);
     lipsyncInterval = null;
     talking = false;
 
-    // Sofort in Idle – jitterfrei
+    // sofort zurück in ruhiges Idle
     setBlendshape(jawOpenIndex, 0.05);
     setBlendshape(mouthWideIndex, 0);
     setBlendshape(mouthPuckerIndex, 0);
-    setBlendshape(mouthSmileIndex, 0);  // Smile auf 0 setzen
-    setBlendshape(mouthFrownIndex, 0);  // Frown auf 0 setzen
+    setBlendshape(mouthSmileIndex, 0);
+    setBlendshape(mouthFrownIndex, 0);
 
-    // Kleinster Cooldown zur Verhinderung von Frame-Rauschen
+    // Mini-Cooldown gegen Nachklappern
     justFinishedSpeaking = true;
     mouthCooldown = true;
-
     setTimeout(() => {
       justFinishedSpeaking = false;
       mouthCooldown = false;
@@ -616,7 +565,6 @@ function speak(text, slow = false) {
 
   speechSynthesis.speak(u);
 }
-
 
 
 /* -----------------------------
