--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,9 +78,11 @@
 ================================ */
 
 // === Blendshape-Indices (Default bis Modell geladen) ===
-let jawOpenIndex = null;
-let mouthWideIndex = null;
-let mouthPuckerIndex = null;
+let jawOpenIndex = 0;     // jawOpen = 0
+let mouthWideIndex = 1;   // mouthWide = 1
+let mouthPuckerIndex = 2; // mouthPucker = 2
+let mouthSmileIndex = 3;  // mouthSmile = 3 (NEU: neuer Blendshape)
+let mouthFrownIndex = 4;  // mouthFrown = 4 (NEU: neuer Blendshape)
 
 // Audio / Analyse
 let audioCtx, analyser, src;
@@ -92,7 +94,6 @@ let talking = false, greeted = false;
 let mouthCooldown = false;   // 🆕 NEU
   // Zusatzflag: 1 Frame Verzögerung nach Speech-Ende
 let justFinishedSpeaking = false;
-
 
 // jawIndex NICHT hier setzen!
 // --> wird später automatisch gesetzt, sobald das Modell geladen wurde
@@ -187,9 +188,11 @@ loader.load("./avatar.glb", gltf => {
       for (const [name, idx] of Object.entries(obj.morphTargetDictionary)) {
         const lower = name.toLowerCase();
 
-        if (lower.includes("jaw"))   jawOpenIndex = idx;
-        if (lower.includes("wide"))  mouthWideIndex = idx;
-        if (lower.includes("puck"))  mouthPuckerIndex = idx;
+        if (lower.includes("jaw"))    jawOpenIndex = idx;
+        if (lower.includes("wide"))   mouthWideIndex = idx;
+        if (lower.includes("puck"))   mouthPuckerIndex = idx;
+        if (lower.includes("smile"))  mouthSmileIndex = idx;  // 🆕 NEU
+        if (lower.includes("frown"))  mouthFrownIndex = idx;  // 🆕 NEU
       }
     }
   });
@@ -197,14 +200,17 @@ loader.load("./avatar.glb", gltf => {
   console.log("✔ FINAL Blendshape-Indices:",
               "jawOpen =", jawOpenIndex,
               "| mouthWide =", mouthWideIndex,
-              "| mouthPucker =", mouthPuckerIndex);
+              "| mouthPucker =", mouthPuckerIndex,
+              "| mouthSmile =", mouthSmileIndex,  // 🆕 NEU
+              "| mouthFrown =", mouthFrownIndex); // 🆕 NEU
 
   // === MODEL STARTEN ===
   scene.add(model);
   document.getElementById("loading").style.display = "none";
   animate();
 });
-  /* --------------------------------------------------
+
+/* --------------------------------------------------
    BLENDSHAPE SETZEN – GLOBAL & VOR SPEAK EINBINDEN!
 -------------------------------------------------- */
 function setBlendshape(index, value) {
@@ -230,6 +236,8 @@ function animate() {
       setBlendshape(jawOpenIndex, 0.05);  // dezente Atmung
       setBlendshape(mouthWideIndex, 0.0);
       setBlendshape(mouthPuckerIndex, 0.0);
+      setBlendshape(mouthSmileIndex, 0.0);  // 🆕 NEU: kein Lächeln im Idle
+      setBlendshape(mouthFrownIndex, 0.0);  // 🆕 NEU: kein Falten der Lippen im Idle
   }
 
   const now = performance.now();
@@ -244,7 +252,6 @@ function animate() {
     renderer.render(scene, camera);
     return;
   }
-
 
   // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL
   if (rising) {
@@ -311,17 +318,19 @@ if (!hmNeigen && !rising) {
     0.018
   );
 }
- // 🟢 OpenAI TTS / SpeechSynthesis steuern Lippen
+
 // Animate greift NICHT ein, solange talking = true!
 if (!talking) {
   // hier nur Idle-Mundhaltung, sobald NICHT gesprochen wird:
   setBlendshape(jawOpenIndex, 0.1);  // leicht offen (Atmung)
   setBlendshape(mouthWideIndex, 0);
   setBlendshape(mouthPuckerIndex, 0);
+  setBlendshape(mouthSmileIndex, 0);  // 🆕 NEU: kein Lächeln während "idle"
+  setBlendshape(mouthFrownIndex, 0);  // 🆕 NEU: keine Falten während "idle"
 }
+
 renderer.render(scene, camera);
 }
-  
 /* -----------------------------
    STATE MACHINE – LOGIK (FINAL)
 ----------------------------- */
@@ -365,23 +374,9 @@ if ("webkitSpeechRecognition" in window) {
           STATE = "answer";
           rising = true;
           riseStartTime = performance.now();
-          // 🔁 NEUER BLOCK: ECHTES TTS MIT LIPSYNC
-fetch("/tts", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ text: data.answer })
-})
-.then(r => r.json())
-.then(dataTTS => {
-  // 1. Audio + Lippenbewegung
-  playAudioAndLipsync(dataTTS.audio, dataTTS.lipsync);
-})
-.catch(err => {
-  console.error("❌ TTS-Fallback:", err);
-  // Fallback: alte TTS nutzen
-  speak(data.answer);
-});
 
+          // 🔁 NEUER BLOCK: TTS – kein Lipsync aus Audio
+          speakAndAnimate(data.answer);
 
           // 3️⃣ ANTWORT FERTIG → jetzt erst zurück nach rechts!
           const waitUntilDone = setInterval(() => {
@@ -451,30 +446,40 @@ let maleVoice = null;
 function setMaleVoice() {
   const voices = speechSynthesis.getVoices();
 
+  // Falls die Stimmen noch nicht geladen sind, wiederhole den Vorgang
   if (!voices.length) {
-    setTimeout(setMaleVoice, 150);
+    setTimeout(setMaleVoice, 150); // Wiederholen, bis Stimmen verfügbar sind
     return;
   }
 
+  // Suche die spezifische Stimme "Microsoft Stefan - German (Germany)"
   maleVoice = voices.find(v => v.name === "Microsoft Stefan - German (Germany)");
-  console.log("Ausgewählte Stimme:", maleVoice);
+
+  // Wenn die Stimme gefunden wurde, wird sie in der Konsole ausgegeben
+  if (maleVoice) {
+    console.log("Ausgewählte Stimme:", maleVoice);
+  } else {
+    console.error("Männliche Stimme nicht gefunden.");
+  }
 }
 
+// Event-Handler für das Laden der Stimmen
 speechSynthesis.onvoiceschanged = setMaleVoice;
 setMaleVoice();
 
-/* --------------------------------
+/* -----------------------------
    WICHTIG: Diese Funktion muss
    VOR speak() im Code stehen:
------------------------------------ */
+----------------------------- */
 function setBlendshape(index, value) {
-  if (!model) return;
+  if (!model) return; // Sicherstellen, dass das Modell vorhanden ist
   model.traverse(obj => {
     if (obj.isMesh && obj.morphTargetInfluences && index !== null) {
       obj.morphTargetInfluences[index] = value;
     }
   });
 }
+
 function lerp(a, b, t) {  // linearer Übergang
   return a + (b - a) * t;
 }
@@ -510,39 +515,61 @@ function speak(text, slow = false) {
       t += slow ? 0.05 : 0.1;
 
       let jaw = Math.abs(Math.sin(t)) * 0.45;
-      jaw += (Math.random() * 0.12 - 0.06);
+      jaw += (Math.random() * 0.12 - 0.06);  // Zufallsfaktor für natürliche Bewegung
       jaw = Math.min(Math.max(jaw, 0), 0.45);
       if (Math.random() < 0.03) jaw *= 0.25;
 
       const wide = jaw * 0.32;
       const puck = jaw * 0.18;
 
+      // Simulierte Lippenbewegungen für A, O, M, P
+      let smile = 0; // mouthSmileIndex für A
+      let frown = 0; // mouthFrownIndex für O und M/P
+
+      if (text.match(/[aáäà]/i)) {  // Wenn "A" im Text vorkommt
+        smile = 0.5;  // Mund für A weiten
+      }
+      if (text.match(/[oóö]/i)) {  // Wenn "O" im Text vorkommt
+        frown = 0.5;  // Mund für O öffnen
+      }
+      if (text.match(/[m]/i)) {    // Wenn "M" im Text vorkommt
+        puck = 0.25; // Leichtes Schließen für "M"
+      }
+      if (text.match(/[p]/i)) {    // Wenn "P" im Text vorkommt
+        wide = 0.2;  // Mund leicht öffnen für "P"
+      }
+
+      // Setze Blendshapes für Lippenbewegungen
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
+      setBlendshape(mouthSmileIndex, smile);  // Für "A"
+      setBlendshape(mouthFrownIndex, frown);  // Für "O" und "M/P"
     }, 38);
   };
 
-u.onend = () => {
-  clearInterval(lipsyncInterval);
-  lipsyncInterval = null;
-  talking = false;
+  u.onend = () => {
+    clearInterval(lipsyncInterval);
+    lipsyncInterval = null;
+    talking = false;
 
-  // Sofort in Idle
-  setBlendshape(jawOpenIndex, 0.05);
-  setBlendshape(mouthWideIndex, 0);
-  setBlendshape(mouthPuckerIndex, 0);
+    // Sofort in Idle
+    setBlendshape(jawOpenIndex, 0.05);
+    setBlendshape(mouthWideIndex, 0);
+    setBlendshape(mouthPuckerIndex, 0);
+    setBlendshape(mouthSmileIndex, 0);  // Reset für smile
+    setBlendshape(mouthFrownIndex, 0);  // Reset für frown
 
-  // Cooldown für animate(), aber micro-delay!
-  justFinishedSpeaking = true;
-  mouthCooldown = true;
+    // Cooldown für animate(), aber micro-delay!
+    justFinishedSpeaking = true;
+    mouthCooldown = true;
 
-  // ⏱ dieser Trick killt das Geister-Zittern:
-  setTimeout(() => {
-    justFinishedSpeaking = false;
-    mouthCooldown = false;
-  }, 20); // nur 20ms → fühlbar, aber unsichtbar
-};
+    // ⏱ dieser Trick killt das Geister-Zittern:
+    setTimeout(() => {
+      justFinishedSpeaking = false;
+      mouthCooldown = false;
+    }, 20); // nur 20ms → fühlbar, aber unsichtbar
+  };
 
   // GANZ WICHTIG!
   speechSynthesis.speak(u);
