--- a/frontend/index.html
+++ b/frontend/index.html
@@ -503,7 +503,7 @@ function speak(text, slow = false) {
   u.rate = slow ? 0.75 : 1.1;
   if (maleVoice) u.voice = maleVoice;
 
-  let lipsyncInterval = null;
+  let lipsyncInterval = null;  // lipsyncInterval als let statt const
   let t = 0;
 
   u.onstart = () => {
